<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>com.omnixys</groupId>
    <artifactId>address</artifactId>
    <version>3.6.0</version>
    <name>address</name>
    <description>address</description>

    <parent>
        <groupId>org.springframework.boot</groupId>
        <artifactId>spring-boot-starter-parent</artifactId>
        <version>4.1.0</version>
        <relativePath/> <!-- lookup parent from repository -->
    </parent>
    <url>https://github.com/omnixys/address-service</url>

    <licenses>
        <license>
            <name>GPL-3.0-or-later</name>
            <url>https://www.gnu.org/licenses/gpl-3.0-standalone.html</url>
        </license>
    </licenses>

    <developers>
        <developer>
            <id>caleb-gyamfi</id>
            <name>Caleb Gyamfi</name>
            <email>caleb.gyamfi@omnixys.com</email>
        </developer>
    </developers>

    <scm>
        <connection>scm:git:git://github.com/omnixys/address-service.git</connection>
        <developerConnection>scm:git:ssh://github.com:omnixys/address-service.git</developerConnection>
        <url>https://github.com/omnixys/address-service</url>
    </scm>

    <properties>
        <java.version>26</java.version>
        <email>caleb-script@outlook.de</email>
        <dotenv-java.version>3.2.0</dotenv-java.version>
        <enable.preview>--enable-preview</enable.preview>
        <hibernate-processor.version>8.0.0.Alpha1</hibernate-processor.version>
        <federation-graphql-java-support.version>6.0.0</federation-graphql-java-support.version>
        <protobuf-java.version>4.32.0</protobuf-java.version>

        <omnixys.bom.version>1.0.6</omnixys.bom.version>
    </properties>

        <repositories>
            <repository>
                <id>github-bom</id>
                <url>https://maven.pkg.github.com/omnixys/omnixys-bom</url>
            </repository>

            <repository>
                <id>github-starter</id>
                <url>https://maven.pkg.github.com/omnixys/omnixys-starter-java</url>
            </repository>
        </repositories>

    <dependencyManagement>
        <dependencies>
            <dependency>
                <groupId>com.omnixys</groupId>
                <artifactId>bom</artifactId>
                <version>${omnixys.bom.version}</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>

            <dependency>
                <groupId>com.google.protobuf</groupId>
                <artifactId>protobuf-java</artifactId>
               <version>${protobuf-java.version}</version>
            </dependency>
        </dependencies>
    </dependencyManagement>

    <dependencies>

        <dependency>
            <groupId>com.omnixys</groupId>
            <artifactId>starter</artifactId>
        </dependency>

        <!--___________________________________SPRING BOOT STARTER__________________________________________________ -->
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-actuator</artifactId>
        </dependency>
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-data-jpa</artifactId>
        </dependency>
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-validation</artifactId>
        </dependency>
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-web</artifactId>
        </dependency>
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-graphql</artifactId>
        </dependency>
        <!--________________________________________________TEST_______________________________________________ -->
        <dependency>
            <groupId>org.springframework.graphql</groupId>
            <artifactId>spring-graphql-test</artifactId>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-test</artifactId>
            <scope>test</scope>
        </dependency>
        <!--________________________________________________DATENBANK_______________________________________________ -->
        <dependency>
            <groupId>org.flywaydb</groupId>
            <artifactId>flyway-database-postgresql</artifactId>
        </dependency>
        <dependency>
            <groupId>org.postgresql</groupId>
            <artifactId>postgresql</artifactId>
        </dependency>
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-flyway</artifactId>
        </dependency>
        <dependency>
            <groupId>org.hibernate.orm</groupId>
            <artifactId>hibernate-spatial</artifactId>
        </dependency>


        <!--__________________________________________WICHTIGE EXTRAS_______________________________________________ -->
        <dependency>
            <groupId>org.projectlombok</groupId>
            <artifactId>lombok</artifactId>
            <optional>true</optional>
        </dependency>
        <dependency>
            <groupId>io.github.cdimascio</groupId>
            <artifactId>dotenv-java</artifactId>
            <version>${dotenv-java.version}</version>
        </dependency>
        <dependency>
            <groupId>org.locationtech.jts</groupId>
            <artifactId>jts-core</artifactId>
            <version>1.19.0</version>
        </dependency>
        <dependency>
            <groupId>com.apollographql.federation</groupId>
            <artifactId>federation-graphql-java-support</artifactId>
            <version>${federation-graphql-java-support.version}</version>
        </dependency>

        <!--____________________________________________CACHE______________________________________________________ -->
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-data-redis</artifactId>
        </dependency>

        <!--_________________________________________________ EXTRAS________________________________________________ -->
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-devtools</artifactId>
            <scope>runtime</scope>
            <optional>true</optional>
        </dependency>

        <!--_____________________________________SECURITY___________________________________________________________ -->
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-oauth2-resource-server</artifactId>
        </dependency>
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-security</artifactId>
        </dependency>
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-actuator-autoconfigure</artifactId>
        </dependency>


    </dependencies>

    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <configuration>
                    <annotationProcessorPaths>
                        <path>
                            <groupId>org.projectlombok</groupId>
                            <artifactId>lombok</artifactId>
                        </path>
                        <path>
                            <groupId>org.hibernate.orm</groupId>
                            <artifactId>hibernate-processor</artifactId>
                            <version>${hibernate-processor.version}</version>
                        </path>


                    </annotationProcessorPaths>
                    <source>${java.version}</source>
                    <target>${java.version}</target>
                    <compilerArgs>
                        <arg>${enable.preview}</arg>
                    </compilerArgs>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.springframework.boot</groupId>
                <artifactId>spring-boot-maven-plugin</artifactId>
                <configuration>
                    <excludes>
                        <exclude>
                            <groupId>org.projectlombok</groupId>
                            <artifactId>lombok</artifactId>
                        </exclude>
                    </excludes>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.codehaus.mojo</groupId>
                <artifactId>versions-maven-plugin</artifactId>
                <version>2.15.0</version>
            </plugin>
        </plugins>
    </build>

</project>
